# GenAI-LLM-Application-using-FastAPI

./: ENV_CONFIG_REFERENCE.md  ENV_SETUP.md  QUICKSTART.md  README.md  SERVICES_TEST_GUIDE.md  TEST_SUITE_SUMMARY.md  Wellbeing Coach.md  pyproject.toml  requirements-test.txt  requirements.txt  run.py  test_services.py
app/: main.py
app/config/: __init__.py  database.py  logging_config.py  settings.py
app/exceptions/: Custom_Exceptions.py  __init__.py
app/models/: feedback.py  interactions.py  recommendations  response.py  user_input.py
app/routes/: feedback.py  wellbeing.py
app/services/: __init__.py  emotion_service.py  feedback_service.py  llm_service.py  memory_service.py  recommendation_service.py  service_factory.py
app/utils/: constants.py  prompts.py
data/: activities.json  sampleInput.json
scripts/: README.md  create_test_db.py  create_test_db.sh  populate_test_data.py
tests/: README.md  __init__.py  conftest.py
tests/configTest/: __init__.py  client.py  database.py  env.py  fixtures.py  safety.py  samples.py
tests/integration/: __init__.py  test_feedback_routes.py  test_persistent_data.py  test_wellbeing_routes.py
tests/unit/: __init__.py  test_database_config.py  test_main.py  test_models.py
tests/unit/services/: test_emotion_service.py  test_feedback_service.py  test_llm_service.py  test_memory_service.py  test_recommendation_service.py
